Fix Arabic OCR: correct language code and result parsing

--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@
                                     <option value="chinese_cht">Chinese (Traditional)</option>
                                     <option value="korean">Korean</option>
                                     <option value="japan">Japanese</option>
-                                    <option value="arabic">Arabic</option>
+                                    <option value="ar">Arabic</option>
                                     <option value="latin">Latin</option>
                                     <option value="cyrillic">Cyrillic</option>
                                     <option value="devanagari">Hindi/Devanagari</option>
