feat: add UI for single-character coordinates OCR option

--- a/templates/index.html
+++ b/templates/index.html
@@ -204,6 +204,12 @@
                                     <option value="PP-OCRv3">PP-OCRv3</option>
                                 </select>
                             </div>
+                            <div class="setting-group checkbox-group">
+                                <label class="checkbox-label">
+                                    <input type="checkbox" id="char-coords-checkbox">
+                                    <span>Include character coordinates</span>
+                                </label>
+                            </div>
                         </div>
                         <button class="btn btn-primary btn-large" id="ocr-btn" disabled>
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -805,3 +811,4 @@
 </body>
 
 </html>
+
